# PascaToC

./: .clangd  .gitignore  CMakeLists.txt  ReadMe.md  a.out  output.ll  run_custom_tests.sh  run_error_tests.sh  run_tests.sh  test.pas
custom_test/: 01_record_basic.pas  02_record_medim.out  02_record_medim.pas  03_record_advance.out  03_record_advance.pas  04_case.out  04_case.pas  05_while.out  05_while.pas  06_repeat.out  06_repeat.pas
docs/: ReadMe.md  分工.md  进度.md
error_test/: 01_declaration_error.pas  02_procedure_function_errors.pas  03_statement_error.pas  04_expression_errors.pas  05_scope_errors.pas
last_test_result/: summary.txt
last_test_result/fail/14_div/: 14_div  14_div.c  14_div.diff
last_test_result/fail/16_mod/: 16_mod.c  16_mod.diff  16_mod.out
last_test_result/fail/26_op_priority4/: 26_op_priority4.c
last_test_result/fail/27_op_priority5/: 27_op_priority5.c
last_test_result/fail/28_unary_op/: 28_unary_op.diff
last_test_result/fail/34_short_circuit/: 34_short_circuit.c
last_test_result/fail/42_color/: 42_color  42_color.c  42_color.diff
last_test_result/fail/44_reverse_output/: 44_reverse_output.c
last_test_result/fail/47_hanoi/: 47_hanoi.c
last_test_result/fail/50_side_effect/: 50_side_effect.c
last_test_result/fail/51_var_name/: 51_var_name.c
last_test_result/fail/57_many_params/: 57_many_params  57_many_params.c  57_many_params.diff
last_test_result/fail/62_register_alloc/: 62_register_alloc.c
last_test_result/fail/63_nested_calls/: 63_nested_calls  63_nested_calls.c  63_nested_calls.diff
last_test_result/fail/65_float/: 65_float.out
last_test_result/pass/00_main/: 00_main  00_main.c
last_test_result/pass/01_var_defn2/: 01_var_defn2  01_var_defn2.c
last_test_result/pass/02_var_defn3/: 02_var_defn3  02_var_defn3.c
last_test_result/pass/03_arr_defn2/: 03_arr_defn2  03_arr_defn2.c
last_test_result/pass/04_const_var_defn2/: 04_const_var_defn2  04_const_var_defn2.c
last_test_result/pass/05_const_var_defn3/: 05_const_var_defn3
last_test_result/pass/06_func_defn/: 06_func_defn  06_func_defn.c
last_test_result/pass/07_var_defn_func/: 07_var_defn_func  07_var_defn_func.c
last_test_result/pass/08_add2/: 08_add2  08_add2.c
last_test_result/pass/09_addc/: 09_addc  09_addc.c
last_test_result/pass/10_sub2/: 10_sub2  10_sub2.c
last_test_result/pass/11_subc/: 11_subc  11_subc.c
last_test_result/pass/12_mul/: 12_mul  12_mul.c
last_test_result/pass/13_mulc/: 13_mulc  13_mulc.c
last_test_result/pass/14_div/: 14_div  14_div.c
last_test_result/pass/15_divc/: 15_divc  15_divc.c
last_test_result/pass/16_mod/: 16_mod  16_mod.c
last_test_result/pass/17_rem/: 17_rem  17_rem.c
last_test_result/pass/18_if_test3/: 18_if_test3  18_if_test3.c
last_test_result/pass/19_if_test4/: 19_if_test4  19_if_test4.c
last_test_result/pass/20_if_test5/: 20_if_test5  20_if_test5.c
last_test_result/pass/21_while_if_test2/: 21_while_if_test2  21_while_if_test2.c
last_test_result/pass/22_arr_expr_len/: 22_arr_expr_len  22_arr_expr_len.c
last_test_result/pass/23_op_priority1/: 23_op_priority1  23_op_priority1.c
last_test_result/pass/24_op_priority2/: 24_op_priority2  24_op_priority2.c
last_test_result/pass/25_op_priority3/: 25_op_priority3  25_op_priority3.c
last_test_result/pass/26_op_priority4/: 26_op_priority4  26_op_priority4.c
last_test_result/pass/27_op_priority5/: 27_op_priority5  27_op_priority5.c
last_test_result/pass/28_unary_op/: 28_unary_op  28_unary_op.c
last_test_result/pass/29_unary_op2/: 29_unary_op2  29_unary_op2.c
last_test_result/pass/30_logi_assign/: 30_logi_assign  30_logi_assign.c
last_test_result/pass/31_comment1/: 31_comment1  31_comment1.c
last_test_result/pass/32_assign_complex_expr/: 32_assign_complex_expr  32_assign_complex_expr.c
last_test_result/pass/33_if_complex_expr/: 33_if_complex_expr  33_if_complex_expr.c
last_test_result/pass/34_short_circuit/: 34_short_circuit  34_short_circuit.c
last_test_result/pass/35_short_circuit3/: 35_short_circuit3  35_short_circuit3.c
last_test_result/pass/36_scope/: 36_scope  36_scope.c
last_test_result/pass/37_sort_test1/: 37_sort_test1  37_sort_test1.c
last_test_result/pass/38_sort_test4/: 38_sort_test4  38_sort_test4.c
last_test_result/pass/39_sort_test6/: 39_sort_test6  39_sort_test6.c
last_test_result/pass/40_percolation/: 40_percolation  40_percolation.c
last_test_result/pass/41_big_int_mul/: 41_big_int_mul  41_big_int_mul.c
last_test_result/pass/43_exgcd/: 43_exgcd  43_exgcd.c
last_test_result/pass/44_reverse_output/: 44_reverse_output  44_reverse_output.c
last_test_result/pass/45_dijkstra/: 45_dijkstra  45_dijkstra.c
last_test_result/pass/46_full_conn/: 46_full_conn  46_full_conn.c
last_test_result/pass/47_hanoi/: 47_hanoi  47_hanoi.c
last_test_result/pass/48_n_queens/: 48_n_queens  48_n_queens.c
last_test_result/pass/49_substr/: 49_substr  49_substr.c
last_test_result/pass/50_side_effect/: 50_side_effect  50_side_effect.c
last_test_result/pass/51_var_name/: 51_var_name  51_var_name.c
last_test_result/pass/52_chaos_token/: 52_chaos_token  52_chaos_token.c
last_test_result/pass/53_skip_spaces/: 53_skip_spaces  53_skip_spaces.c
last_test_result/pass/54_long_array/: 54_long_array  54_long_array.c
last_test_result/pass/55_long_array2/: 55_long_array2  55_long_array2.c
last_test_result/pass/56_long_code2/: 56_long_code2  56_long_code2.c
last_test_result/pass/58_many_params2/: 58_many_params2  58_many_params2.c
last_test_result/pass/59_many_globals/: 59_many_globals  59_many_globals.c
last_test_result/pass/60_many_locals/: 60_many_locals  60_many_locals.c
last_test_result/pass/61_many_locals2/: 61_many_locals2  61_many_locals2.c
logs/: output.c
open_set/: run_pas.sh
src/: main.cpp
src/Core/: ErrorHandler.cpp  ErrorHandler.h  Header.h  PascalParse.cpp  PascalParse.h  environment.h  lexer.l  parser.y
test_result/test20250501_191349/: summary.txt
test_result/test20250501_191726/: summary.txt
test_result/test20250501_192341/: summary.txt
test_result/test20250501_192426/: summary.txt
(+72 files in other folders)
